<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.praga.sampleapp.AddEventDetailsActivity">

    <EditText
        android:id="@+id/add_event_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:inputType="textCapWords"
        android:gravity="bottom" />

    <EditText
        android:id="@+id/add_event_event_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/event_descritpion"
        android:inputType="textMultiLine"
        android:layout_below="@id/add_event_event_name"
        android:layout_marginTop="15dp"
        android:gravity="bottom" />

    <EditText
        android:id="@+id/add_event_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_location"
        android:inputType="textMultiLine"
        android:layout_marginTop="15dp"
        android:layout_below="@id/add_event_event_description"
        android:gravity="bottom" />

    <Button
        android:id="@+id/add_event_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setDate"
        android:text="@string/date"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_below="@+id/add_event_event_location"
        android:layout_marginTop="15dp"
        android:padding="2dp"
        />

    <Button
        android:id="@+id/add_event_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setTime"
        android:text="@string/time"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:layout_below="@+id/add_event_event_location"
        android:layout_marginTop="15dp"
        android:padding="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_event_date_button"
        android:id="@+id/add_event_numhours_string"
        android:text="Number of Hours"
        android:layout_alignParentStart="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/add_event_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_event_time_button"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@id/add_event_time_button"
        />

    <Button
        android:id="@+id/add_event_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceptEvent"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="26dp"
        android:layout_alignParentLeft="true"
        android:padding="2dp"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/add_event_reject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rejectEvent"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="26dp"
        android:layout_alignParentRight="true"
        android:padding="2dp"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>